register interface change

--- a/static/css/login.css
+++ b/static/css/login.css
@@ -15,7 +15,7 @@ a:hover{
     background:#fff;
 }
 .bg-box{
-    background:url(../images/login-bg.png) no-repeat center center;
+    background:url(../images/login-background.jpg) no-repeat center ;
 }
 .header-box{
     width:1190px;
