--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 <div class="flex-center">
     <div class="container">
         <div>
-            <h1 class="logo"><a href="{% url 'index' %}">Django Auth Example</a></h1>
+            <h1 class="logo"><a href="{% url 'index' %}">教育卫星在线平台</a></h1>
             {% if user.is_authenticated %}
                 <p>你已登录，欢迎你：<a href="#">{{ user.username }}</a></p>
                 <button class="btn btn-default"><a href="{% url 'logout' %}?next={{ request.path }}">注销登录</a>
@@ -20,7 +20,7 @@
                 </button>
             {% else %}
                 <p>你还没有登录，请
-                    <button class="btn btn-default"><a href="{% url 'login' %}?next={{ request.path }}">登录</a>
+                    <button class="btn btn-default"><a href="{% url 'users:login' %}?next={{ request.path }}">登录</a>
                     </button>
                     或者
                     <button class="btn btn-default"><a href="{% url 'users:register' %}?next={{ request.path }}">注册</a>
