--- a/templates/login.html
+++ b/templates/login.html
@@ -1,45 +1,104 @@
+
+{% load staticfiles %}
 <!DOCTYPE html>
-<html lang="zh-cn">
+<html>
+
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>登录</title>
-    <link rel="stylesheet" href="https://unpkg.com/mobi.css/dist/mobi.min.css">
-    <style>
-        .errorlist {
-            color: red;
-        }
-    </style>
+	<meta charset="UTF-8">
+    <meta name="renderer" content="webkit">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1" >
+	<title>慕学在线网登录</title>
+	<link rel="stylesheet" type="text/css" href="{% static 'css/reset.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}">
 </head>
 <body>
-<div class="flex-center">
-    <div class="container">
-        <div class="flex-center">
-            <div class="unit-1-2 unit-1-on-mobile">
-                <h1><a href="{% url 'index' %}">Django Auth Example</a></h1>
-                <h3>登录</h3>
-                <form class="form" action="{% url 'login' %}" method="post">
-                    {% csrf_token %}
-                    {{ form.non_field_errors }}
-                    {% for field in form %}
-                        {{ field.label_tag }}
-                        {{ field }}
-                        {{ field.errors }}
-                        {% if field.help_text %}
-                            <p class="help text-small text-muted">{{ field.help_text|safe }}</p>
-                        {% endif %}
-                    {% endfor %}
-                    <button type="submit" class="btn btn-primary btn-block">登录</button>
-                    <input type="hidden" name="next" value="{{ next }}"/>
-                </form>
-                <div class="flex-left top-gap text-small">
-                    <div class="unit-2-3"><span>没有账号？<a href="{% url 'users:register' %}">立即注册</a></span></div>
-                    <div class="unit-1-3 flex-right"><span><a href="{% url 'password_reset' %}">忘记密码？</a></span></div>
+<div class="dialog" id="jsDialog">
+<!--提示弹出框-->
+<div class="successbox dialogbox" id="jsSuccessTips">
+    <h1>成功提交</h1>
+    <div class="close jsCloseDialog"><img src="{% static 'images/dig_close.png' %}"/></div>
+    <div class="cont">
+        <h2>您的需求提交成功！</h2>
+        <p></p>
+    </div>
+</div>
+<div  class="noactivebox dialogbox" id="jsUnactiveForm" >
+    <h1>邮件验证提示</h1>
+    <div class="close jsCloseDialog"><img src="{% static 'images/dig_close.png' %}"/></div>
+    <div class="center">
+        <img src="{% static 'images/send.png' %}"/>
+        <p>我们已经向您的邮箱<span class="green" id="jsEmailToActive">12@13.com</span>发送了邮件，<br/>为保证您的账号安全，请及时验证邮箱</p>
+        <p class="a"><a class="btn" id="jsGoToEmail" target="_blank" href="http://mail.qq.com">去邮箱验证</a></p>
+        <p class="zy_success upmove"></p>
+        <p style="display: none;" class="sendE2">没收到，您可以查看您的垃圾邮件和被过滤邮件，也可以再次发送验证邮件（<span class="c5c">60s</span>）</p>
+        <p class="sendE">没收到，您可以查看您的垃圾邮件和被过滤邮件，<br/>也可以<span class="c5c green" id="jsSenEmailAgin" style="cursor: pointer;">再次发送验证邮件</span></p>
+    </div>
+</div>
+</div>
+<div class="bg" id="dialogBg"></div>
+<header>
+    <div class="c-box fff-box">
+        <div class="wp header-box">
+            <p class="fl hd-tips">教育卫星在线平台！</p>
+            <ul class="fr hd-bar">
+                <li>服务电话：<span>xxxxxxxx</span></li>
+                <li class="active"><a href="{% url 'users:login' %}">[登录]</a></li>
+                <li><a href="{% url 'users:register' %}">[注册]</a></li>
+            </ul>
+        </div>
+    </div>
+</header>
+<section>
+    <div class="c-box bg-box">
+        <div class="login-box clearfix">
+            <div class="hd-login clearfix">
+                <a class="index-logo" href="{% url 'index' %}"></a>
+                <h1>用户登录</h1>
+                <a class="index-font" href="{% url 'index' %}">回到首页</a>
+            </div>
+            <div class="fl slide">
+                <div class="imgslide">
+                    <ul class="imgs">
+                            <li><a href=""><img width="483" height="472" src="{% static 'images/mysql.jpg' %}" /></a></li>
+                            <li><a href=""><img width="483" height="472" src="{% static 'images/mysql.jpg' %}" /></a></li>
+                            <li><a href=""><img width="483" height="472" src="{% static 'images/mysql.jpg' %}" /></a></li>
+                    </ul>
                 </div>
+                <div class="unslider-arrow prev"></div>
+                <div class="unslider-arrow next"></div>
+            </div>
+            <div class="fl form-box">
+                <h2>帐号登录</h2>
+                <form action="/users/login/" method="post" autocomplete="off">
+                    <input type='hidden' name='csrfmiddlewaretoken' value='mymQDzHWl2REXIfPMg2mJaLqDfaS1sD5' />
+                    <div class="form-group marb20 {% if login_form.errors.username %}errorput{% endif %}">
+                        <label>用&nbsp;户&nbsp;名</label>
+                        <input name="username" id="account_l" type="text" placeholder="用户名/邮箱" />
+                    </div>
+                    <div class="form-group marb8 {% if login_form.errors.username %}errorput{% endif %}">
+                        <label>密&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;码</label>
+                        <input name="password" id="password_l" type="password" placeholder="请输入您的密码" />
+                    </div>
+                    <div class="error btns login-form-tips" id="jsLoginTips">
+                        {% for key,error in login_form.errors.items %}
+                            {{ error }}
+                        {% endfor %}
+                        {{ msg }}
+                    </div>
+                     <input class="btn btn-green" id="jsLoginBtn" type="submit" value="立即登录 > " />
+                <input type='hidden' name='csrfmiddlewaretoken' value='5I2SlleZJOMUX9QbwYLUIAOshdrdpRcy' />
+                    {% csrf_token %}
+                </form>
+                <p class="form-p">没有帐号？<a href="{% url 'users:register' %}">[立即注册]</a></p>
             </div>
         </div>
     </div>
-</div>
+</section>
+<script src="{% static 'js/jquery.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'js/unslider.js' %}" type="text/javascript"></script>
+<script src="{% static 'js/login.js' %}"  type="text/javascript"></script>
 </body>
 </html>
+
+
+
