--- a/templates/video/detail.html
+++ b/templates/video/detail.html
@@ -14,7 +14,7 @@
         <p>{{video.description}}</p> 
 
     </div>
-    <a href="/video">返回视频列表</a>
+    <a href="/video/index">返回视频列表</a>
 
 {% endblock content %} 
 
