--- a/templates/video/detail.html
+++ b/templates/video/detail.html
@@ -7,7 +7,7 @@
     <div>
     
         <video class="video" autoplay="autoplay" controls="controls" controlslist="nodownload">
-            <source src="{{ MEDIA_URL }}{{ video.file }}" type="video/mp4">
+            <source src="{{ video.file }}" type="video/mp4">
         </video>
         <p>{{ video.title }}</p>
         <hr>
