--- a/templates/video/detail.html
+++ b/templates/video/detail.html
@@ -7,14 +7,14 @@
     <div>
     
         <video class="video" autoplay="autoplay" controls="controls" controlslist="nodownload">
-            <source src="https://education-satellite-morehappysoftware.app.secoder.net/opt/utils/{{ video.file }}" type="video/mp4">
+            <source src="{{MEDIA_URL}}{{video.file}}" type="video/mp4">
         </video>
         <p>{{ video.title }}</p>
         <hr>
         <p>{{video.description}}</p> 
 
     </div>
-    <a href="/video/index">返回视频列表</a>
+    <a href="/video">返回视频列表</a>
 
 {% endblock content %} 
 
