--- a/templates/register.html
+++ b/templates/register.html
@@ -30,7 +30,7 @@
                     <h2>邮箱注册</h2>
                 </div>
                 <div class="tab-form">
-                    <form id="email_register_form" method="post" action="{% url 'users:register' %}" autocomplete="off">
+                    <!-- <form id="email_register_form" method="post" action="{% url 'users:register' %}" autocomplete="off">
                         <input type='hidden' name='csrfmiddlewaretoken' value='gTZljXgnpvxn0fKZ1XkWrM1PrCGSjiCZ' />
                         <div class="form-group marb20 {% if login_form.errors.username %}errorput{% endif %}">
                             <label>用&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;户&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名</label>
@@ -57,6 +57,31 @@
                         <div class="auto-box marb8">
                         </div>
                         <input class="btn btn-green" id="jsEmailRegBtn" type="submit" value="注册并登录" />
+                    <input type='hidden' name='csrfmiddlewaretoken' value='5I2SlleZJOMUX9QbwYLUIAOshdrdpRcy' />
+                    {% csrf_token %}
+                    </form> -->
+                    <form id="mobile_register_form" method="post" action="{% url 'users:verify' %}" autocomplete="off">
+                        <!-- <input type='hidden' name='csrfmiddlewaretoken' value='gTZljXgnpvxn0fKZ1XkWrM1PrCGSjiCZ' /> -->
+                        <div class="form-group marb20 {% if login_form.errors.username %}errorput{% endif %}">
+                            <label>用&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;户&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名</label>
+                            <input  type="text" id="id_username" name="username" value="{{ verify_form.username.value }}" placeholder="请输入您的用户名" />
+                        </div>
+                        <div class="form-group marb20">
+                            <label>手&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;机&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;号</label>
+                            <input  type="text" id="id_mobile" name="mobile" value="{{ verify_form.mobile.value }}" placeholder="请输入您的手机号码" />
+                        </div>
+                        <div class="form-group marb8 {% if login_form.errors.password %}errorput{% endif %}">
+                            <label>密&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;码</label>
+                            <input type="password" id="id_password" name="password"  value="{{ verify_form.password.value }}" placeholder="请输入6-20位非中文字符密码" />
+                        </div>
+                        <!-- <input class="btn btn-green" id="jsEmailRegBtn" type="submit" value="注册并登录" /> -->
+                        <div class="error btns" id="jsEmailTips">
+                            {% for key,error in verify_form.errors.items %}
+                                {{ error }}
+                            {% endfor %}
+                            {{ msg }}
+                        </div>
+                        <input class="btn btn-green" id="jsEmailRegBtn" type="submit" value="发送验证码" />
                     <input type='hidden' name='csrfmiddlewaretoken' value='5I2SlleZJOMUX9QbwYLUIAOshdrdpRcy' />
                     {% csrf_token %}
                     </form>
