--- a/templates/register_email.html
+++ b/templates/register_email.html
@@ -1,3 +1,4 @@
+
 {#templates/register.html#}
 
 {% load staticfiles %}
@@ -27,10 +28,10 @@
             </div>
             <div class="fl form-box">
                 <div class="tab">
-                    <h2>手机注册</h2>
+                    <h2>邮箱注册</h2>
                 </div>
                 <div class="tab-form">
-                    <!-- <form id="email_register_form" method="post" action="{% url 'users:register' %}" autocomplete="off">
+                    <form id="email_register_form" method="post" action="{% url 'users:register' %}" autocomplete="off">
                         <input type='hidden' name='csrfmiddlewaretoken' value='gTZljXgnpvxn0fKZ1XkWrM1PrCGSjiCZ' />
                         <div class="form-group marb20 {% if login_form.errors.username %}errorput{% endif %}">
                             <label>用&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;户&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名</label>
@@ -59,10 +60,10 @@
                         <input class="btn btn-green" id="jsEmailRegBtn" type="submit" value="注册并登录" />
                     <input type='hidden' name='csrfmiddlewaretoken' value='5I2SlleZJOMUX9QbwYLUIAOshdrdpRcy' />
                     {% csrf_token %}
-                    </form> -->
-                    <form id="mobile_register_form" method="post" action="{% url 'users:verify' %}" autocomplete="off">
+                    </form>
+                    <!-- <form id="mobile_register_form" method="post" action="{% url 'users:verify' %}" autocomplete="off">
                         <!-- <input type='hidden' name='csrfmiddlewaretoken' value='gTZljXgnpvxn0fKZ1XkWrM1PrCGSjiCZ' /> -->
-                        <div class="form-group marb20 {% if login_form.errors.username %}errorput{% endif %}">
+                        <!-- <div class="form-group marb20 {% if login_form.errors.username %}errorput{% endif %}">
                             <label>用&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;户&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名</label>
                             <input  type="text" id="id_username" name="username" value="{{ verify_form.username.value }}" placeholder="请输入您的用户名" />
                         </div>
@@ -79,18 +80,18 @@
                                 <input id="jsPhoneRegCaptcha" name="mobile_code" type="text" placeholder="输入手机验证码" />
                             </div>
                             <input class="verify-code-btn sendcode" id="jsSendCode" type="submit" value="发送验证码">
-                            <input type='hidden' name='send' value={{verify_form.send.value}} />
-                        <div class="error btns" id="jsEmailTips">
+                            <input type='hidden' name='send' value={{verify_form.send.value}} /> --> -->
+                        <!-- <div class="error btns" id="jsEmailTips">
                         
                             {% for key,error in verify_form.errors.items %}
                                 {{ error }}
                             {% endfor %}
                             {{ msg }}
-                        </div>
-                        <input class="btn btn-green" id="jsEmailRegBtn" type="submit" value="注册并登录" />
+                        </div> -->
+                        <!-- <input class="btn btn-green" id="jsEmailRegBtn" type="submit" value="注册并登录" />
                     <input type='hidden' name='csrfmiddlewaretoken' value='5I2SlleZJOMUX9QbwYLUIAOshdrdpRcy' />
-                    {% csrf_token %}
-                    </form>
+                    {% csrf_token %} -->
+                    <!-- </form> -->
                 </div>
                 <p class="form-p">已有账号？<a href="{% url 'login' %}">[立即登录]</a></p>
             </div>
