--- a/templates/register_email.html
+++ b/templates/register_email.html
@@ -26,6 +26,17 @@
                 <h1>用户注册</h1>
                 <a class="index-font" href="{% url 'index' %}">回到首页</a>
             </div>
+            <div class="fl slide">
+                <div class="imgslide">
+                    <ul class="imgs">
+                            <li><a href=""><img width="483" height="472" src="{% static 'images/mysql.jpg' %}" /></a></li>
+                            <li><a href=""><img width="483" height="472" src="{% static 'images/mysql.jpg' %}" /></a></li>
+                            <li><a href=""><img width="483" height="472" src="{% static 'images/mysql.jpg' %}" /></a></li>
+                    </ul>
+                </div>
+                <div class="unslider-arrow prev"></div>
+                <div class="unslider-arrow next"></div>
+            </div>
             <div class="fl form-box">
                 <div class="tab">
                     <h2>邮箱注册</h2>
