--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
                         <div class="personal">
                             <dl class="user fr">
                                 <dd>{{ user.username }}<img class="down fr"
-                                                            src="{% static "images/top_down.png" %}"/></dd>
+                                        src="{% static "images/top_down.png" %}"/></dd>
                                 <dt><img width="20" height="20" src="{{ MEDIA_URL }}{{ request.user.image }}"/></dt>
                             </dl>
                             <div class="userdetail">
@@ -110,36 +110,12 @@
 {% block content %}
 {% endblock %}
 
+{% block footer %}
+{% endblock %}
 
 
-<footer>
-    <div class="footer">
-        <div class="wp">
-            <ul class="cont">
-                <li class="logo"><a href=""><img src="{% static 'images/footlogo.png' %}"/></a></li>
-                <li class="code"><img src="{% static 'images/code.jpg' %}"/>
-                    <p class="center">扫描关注微信</p></li>
-                <li class="third"><img class="fl" src="{% static 'images/tell.png' %}"/>
-                    <p class="tell">88888888</p>
-                    <p class="time">周一至周日 9:00-18:00</p></li>
-            </ul>
-        </div>
-        <p class="line"></p>
-        <div class="wp clear">
-            <span class="fl"> 2019 www.secoder.net.com 航天创客-卫星教育在线交流平台 保留所有权利</span>
-            <span class="fr">copyright 2019 ICP备案证书号：京ICP备xxxxx号-1</span>
-        </div>
-    </div>
-</footer>
 
-<section>
-    <ul class="sidebar">
-        <li class="qq">
-            <a target="_blank" href=""></a>
-        </li>
-        <li class="totop"></li>
-    </ul>
-</section>
+
 
 <script src="{% static 'js/selectUi.js' %}" type='text/javascript'></script>
 <script src="{% static 'js/deco-common.js' %}" type='text/javascript'></script>
