--- a/templates/satellite_index.html
+++ b/templates/satellite_index.html
@@ -25,115 +25,39 @@
 				</div>
 				</div>
 			</div>
-<!--banner end-->
-<!--feature start-->
-	<!-- <section>
-		<div class="wp">
-			<ul class="feature">
-				<li class="feature1">
-					<img class="pic" src="{% static 'images/feature1.png' %}"/>
-					<p class="center">专业权威</p>
-				</li>
-				<li class="feature2">
-					<img class="pic" src="{% static 'images/feature2.png' %}"/>
-					<p class="center">课程最新</p>
-				</li>
-				<li class="feature3">
-					<img class="pic" src="{% static 'images/feature3.png' %}"/>
-					<p class="center">名师授课</p>
-				</li>
-				<li class="feature4">
-					<img class="pic" src="{% static 'images/feature4.png' %}"/>
-					<p class="center">数据真实</p>
-				</li>
-			</ul>
-		</div>
-	</section> -->
-<!--feature end-->
-<!--module1 start-->
-	<!-- <section>
-		<div class="module">
-			<div class="wp">
-				<h1>公开课程</h1>
-				<div class="module1 eachmod">
-					<div class="module1_1 left">
-						<img width="228" height="614" src="{% static 'images/module1_1.jpg' %}"/>
-						<p class="fisrt_word">名师授课<br/>专业权威</p>
-						<a class="more" href="">查看更多课程 ></a>
-					</div>
-					<div class="right group_list">
-						<div class="module1_2 box">
-							<div class="imgslide2">
-								<ul class="imgs">
-                                    {% for banner_course in banner_courses %}
-                                    <li>
-                                        <a href="">
-                                            <img width="470" height="300" src="{{ MEDIA_URL }}{{ banner_course.image }}" />
-                                        </a>
-                                    </li>
-                                    {% endfor %}
-								</ul>
-							</div>
-							<div class="unslider-arrow2 prev"></div>
-							<div class="unslider-arrow2 next"></div>
-						</div>
-                            {% for course in courses %}
-                            <div class="module1_{{ forloop.counter|add:2 }} box">
-                                <a href="">
-                                    <img width="233" height="190" src="{{ MEDIA_URL }}{{ course.image }}"/>
-                                </a>
-                                <div class="des">
-                                    <a href="">
-                                        <h2 title="django入门">{{ course.name }}</h2>
-                                    </a>
-                                    <span class="fl">难度：<i class="key">{{ course.get_degree_display }}</i></span>
-                                    <span class="fr">学习人数：{{ course.students }}</span>
-                                </div>
-                                <div class="bottom">
-                                    <span class="fl" title="慕课网">{{ course.course_org.name }}</span>
-                                    <span class="star fr">{{ course.fav_nums }}</span>
-                                </div>
-                            </div>
-                            {% endfor %}
-					</div>
-				</div>
-			</div>
-		</div>
-	</section> -->
-	<!-- <section>
-		<div class="module greybg">
-			<div class="wp">
-				<h1>课程机构</h1>
-				<div class="module3 eachmod">
-					<div class="module3_1 left">
-						<img width="228" height="463" src="/static/images/module3_1.jpg"/>
-						<p class="fisrt_word">名校来袭<br/>权威认证</p>
-						<a class="more" href="">查看更多机构 ></a>
-					</div>
-					<div class="right">
-						<ul>
-                                {% for org in course_orgs %}
-                                 <li class="{% if forloop.counter|divisibleby:5 %}five{% endif %}">
-                                    <a href="">
-                                        <div class="company">
-                                            <img width="184" height="100" src="{{ MEDIA_URL }}{{ org.image }}"/>
-                                            <div class="score">
-                                                <div class="circle">
-                                                    <h2>{{ org.tag }}</h2>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <p><span class="key" title="{{ org.name }}">{{ org.name }}</span></p>
-                                    </a>
-                                </li>
-                                {% endfor %}
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section> -->
 {% endblock %} -->
+	<!--banner end-->
+
+{% block footer %}
+<footer>
+		<div class="footer">
+			<div class="wp">
+				<ul class="cont">
+					<li class="logo"><a href=""><img src="{% static 'images/footlogo.png' %}"/></a></li>
+					<li class="code"><img src="{% static 'images/code.jpg' %}"/>
+						<p class="center">扫描关注微信</p></li>
+					<li class="third"><img class="fl" src="{% static 'images/tell.png' %}"/>
+						<p class="tell">88888888</p>
+						<p class="time">周一至周日 9:00-18:00</p></li>
+				</ul>
+			</div>
+			<p class="line"></p>
+			<div class="wp clear">
+				<span class="fl"> 2019 www.secoder.net.com 航天创客-卫星教育在线交流平台 保留所有权利</span>
+				<span class="fr">copyright 2019 ICP备案证书号：京ICP备xxxxx号-1</span>
+			</div>
+		</div>
+	</footer>
+	<section>
+			<ul class="sidebar">
+				<li class="qq">
+					<a target="_blank" href=""></a>
+				</li>
+				<li class="totop"></li>
+			</ul>
+		</section>
+{% endblock %}
+
 {% block custom_js %}
 <script type="text/javascript" src="{% static 'js/index.js' %}"></script>
 {% endblock %}
