--- a/templates/base.html
+++ b/templates/base.html
@@ -45,8 +45,8 @@
                                     </dd>
                                 </dl>
                                 <div class="btn">
-                                    <a class="personcenter fl" href="">进入个人中心</a>
-                                    <a class="fr" href="">退出</a>
+                                    <a class="personcenter fl" href="{% url 'users:user_info' %}">进入个人中心</a>
+                                    <a class="fr" href="{% url 'users:logout' %}">退出</a>
                                 </div>
                             </div>
                         </div>
