--- a/templates/usercenter_base.html
+++ b/templates/usercenter_base.html
@@ -42,6 +42,30 @@
     </section>
     {% endblock %}
 
+<div class="dialog" id="jsDialog">
+        <div class="successbox dialogbox" id="jsSuccessTips">
+            <h1>成功提交</h1>
+            <div class="close jsCloseDialog"><img src="{% static '' %}images/dig_close.png"/></div>
+            <div class="cont">
+                <h2>您的需求提交成功！</h2>
+                <p></p>
+            </div>
+        </div>
+        <!--提示弹出框-->
+        <div class="bidtips dialogbox promptbox" id="jsComfirmDialig">
+            <h1>确认提交</h1>
+            <div class="close jsCloseDialog"><img src="{% static 'images/dig_close.png' %}"/></div>
+            <div class="cont">
+                <h2>您确认提交吗？</h2>
+                <dd class="autoTxtCount">
+                    <div class="button">
+                        <input type="button" class="fl half-btn" value="确定" id="jsComfirmBtn"/>
+                        <span class="fr half-btn jsCloseDialog">取消</span>
+                    </div>
+                </dd>
+            </div>
+        </div>
+</div>
 {% block custom_js %}
 <script src="{% static 'js/plugins/jquery.upload.js' %}" type='text/javascript'></script>
 <script src="{% static 'js/validate.js' %}" type="text/javascript"></script>
