--- a/templates/base.html
+++ b/templates/base.html
@@ -53,6 +53,7 @@
                     {% else %}
                         <a style="color:white" class="fr registerbtn" href="{% url 'users:register' %}">邮箱注册</a>
                         <a style="color:white" class="fr registerbtn" href="{% url 'users:verify' %}">手机注册</a>
+                        <a style="color:white" class="fr loginbtn" href="/xadmin">管理员</a>
                         <a style="color:white" class="fr loginbtn" href="{% url 'users:login' %}">登录</a>
                     {% endif %}
                 </div>
