--- a/templates/usercenter_base.html
+++ b/templates/usercenter_base.html
@@ -40,7 +40,6 @@
             {% endblock %}
         </div>
     </section>
-    {% endblock %}
 
 <div class="dialog" id="jsDialog">
         <div class="successbox dialogbox" id="jsSuccessTips">
@@ -66,6 +65,29 @@
             </div>
         </div>
 </div>
+<div class="resetpwdbox dialogbox" id="jsResetDialog">
+        <h1>修改密码</h1>
+        <div class="close jsCloseDialog"><img src="{% static 'images/dig_close.png' %}"/></div>
+        <div class="cont">
+            <form id="jsResetPwdForm" autocomplete="off">
+                <div class="box">
+                    <span class="word2">新&nbsp;&nbsp;密&nbsp;&nbsp;码</span>
+                    <input type="password" id="pwd" name="password1" placeholder="6-20位非中文字符"/>
+                </div>
+                <div class="box">
+                    <span class="word2">确定密码</span>
+                    <input type="password" id="repwd" name="password2" placeholder="6-20位非中文字符"/>
+                </div>
+                <div class="error btns" id="jsResetPwdTips"></div>
+                <div class="button">
+                    <input id="jsResetPwdBtn" type="button" value="提交"/>
+                </div>
+                {% csrf_token %}
+            </form>
+        </div>
+</div>
+{% endblock %}
+
 {% block custom_js %}
 <script src="{% static 'js/plugins/jquery.upload.js' %}" type='text/javascript'></script>
 <script src="{% static 'js/validate.js' %}" type="text/javascript"></script>
