--- a/templates/video/base.html
+++ b/templates/video/base.html
@@ -6,17 +6,96 @@
     <meta name="description" content="基于Django的视频点播网站">
     <meta name="google-site-verification" content="UhrjUG70pwiY6Sp4u4p5Q3ol8iD7yx4ZSwmGBpoaWik" />
     <title> {% block title %}python视频教程{% endblock title %}</title>
-
-    {% comment %} 
-    <link rel="stylesheet" type="text/css" href="https://cdn.staticfile.org/semantic-ui/2.4.1/semantic.min.css">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/semantic.custom.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-    {% endcomment %}
     <center>
         <h1>Python教程</h1>
         <img src="{% static 'images/logo1.jpg' %}" alt="logo" width="120" height="100">
     </center>
 </head>
+<section class="headerwrap ">
+    <header>
+        <div class=" header">
+            <div class="top">
+                <div class="wp">
+                    <div  class="fl"><p><a style="color: white;font-size: 18px;" href="https://www.secoder.net/"><b>软工平台</b></a></p></div>
+                    <!--登录后跳转-->
+
+                    {% if request.user.is_authenticated %}
+                        <div class="personal">
+                            <dl class="user fr">
+                                <dd>{{ user.username }}<img class="down fr"
+                                                            src="{% static "images/top_down.png" %}"/></dd>
+                                <dt><img width="20" height="20" src="{{ MEDIA_URL }}{{ request.user.image }}"/></dt>
+                            </dl>
+                            <div class="userdetail">
+                                <dl>
+                                    <dt><img width="80" height="80" src="{{ MEDIA_URL }}{{ request.user.image }}"/></dt>
+                                    <dd>
+                                        <h2>{{ request.user.nick_name }}</h2>
+                                        <p>{{ request.user.username }}</p>
+                                    </dd>
+                                </dl>
+                                <div class="btn">
+                                    <a class="personcenter fl" href="">进入个人中心</a>
+                                    <a class="fr" href="">退出</a>
+                                </div>
+                            </div>
+                        </div>
+                    {% else %}
+                        <a style="color:white" class="fr registerbtn" href="{% url 'users:register' %}">邮箱注册</a>
+                        <a style="color:white" class="fr registerbtn" href="{% url 'users:verify' %}">手机注册</a>
+                        <a style="color:white" class="fr loginbtn" href="{% url 'users:login' %}">登录</a>
+                    {% endif %}
+                </div>
+            </div>
+
+            <div class="middle">
+                <div class="wp">
+                    <a href="/"><img class="fl" src="{% static 'images/logo.jpg' %}"/></a>
+                    <div class="searchbox fr">
+                        <div class="selectContainer fl">
+                            <span class="selectOption" id="jsSelectOption" data-value="course">
+                                查找
+                            </span>
+                            <ul class="selectMenu" id="jsSelectMenu">
+                                <li data-value="course">查看程序</li>
+                                <li data-value="org">观看视频</li>
+                                <li data-value="teacher">授课老师</li>
+                            </ul>
+                        </div>
+                        <input id="search_keywords" class="fl" type="text" value="" placeholder="请输入搜索内容"/>
+                        <img class="search_btn fr" id="jsSearchBtn" src="{% static 'images/search_btn.png' %}"/>
+                    </div>
+                </div>
+            </div>
+            <nav>
+                <div class="nav">
+                    <div class="wp">
+                        <ul>
+                            <li {% if request.path == '/' %}class="active" {% endif %}><a
+                                    href="{% url 'index' %}">首页</a></li>
+                            <li {% if request.path|slice:'7' == '/course' %}class="active"{% endif %}>
+                                <a href="">
+                                    查看程序<img class="hot" src="{% static 'images/nav_hot.png' %}">
+                                </a>
+                            </li>
+                            <li {% if request.path|slice:'6' == '/vedio' %}class="active"{% endif %}>
+                                <a href="{% url 'video:index' %}">观看视频</a>
+                            </li>
+                            <li {% if request.path|slice:'9' == '/org/list' %}class="active" {% endif %}><a
+                                    href="">论坛</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </header>
+</section>
+
+
+
+
+
+
 <body>
     
     {% comment %} {% include "video/nav.html" %} {% endcomment %}
