--- a/templates/video/base.html
+++ b/templates/video/base.html
@@ -1,16 +1,21 @@
 {% load static %}
 {% load staticfiles %}
+
 <!DOCTYPE html>
 <html lang="zh-hans">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="基于Django的视频点播网站">
-    <meta name="google-site-verification" content="UhrjUG70pwiY6Sp4u4p5Q3ol8iD7yx4ZSwmGBpoaWik" />
-    <title> {% block title %}python视频教程{% endblock title %}</title>
-{% comment %}     <center>
-        <h1>Python教程</h1>
-        <img src="{% static 'images/logo1.jpg' %}" alt="logo" width="120" height="100">
-    </center> {% endcomment %}
+    <meta name="renderer" content="webkit">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+    <title>{% block title %}航天创客python视频教程{% endblock %}</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/reset.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/animate.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    {% block custom_css %}
+
+    {% endblock %}
+    <script src="{% static 'js/jquery.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/jquery-migrate-1.2.1.min.js' %}" type="text/javascript"></script>
 </head>
 <section class="headerwrap ">
     <header>
