--- a/templates/video/base.html
+++ b/templates/video/base.html
@@ -107,9 +107,25 @@
     <center>
 
     <br>
-    <footer>
-        <center>&copy;航天创客教育卫星</center>
-    </footer>
+<footer>
+    <div class="footer">
+        <div class="wp">
+            <ul class="cont">
+                <li class="logo"><a href=""><img src="{% static 'images/footlogo.png' %}"/></a></li>
+                <li class="code"><img src="{% static 'images/code.jpg' %}"/>
+                    <p class="center">扫描关注微信</p></li>
+                <li class="third"><img class="fl" src="{% static 'images/tell.png' %}"/>
+                    <p class="tell">88888888</p>
+                    <p class="time">周一至周日 9:00-18:00</p></li>
+            </ul>
+        </div>
+        <p class="line"></p>
+        <div class="wp clear">
+            <span class="fl"> 2019 www.secoder.net.com 航天创客-卫星教育在线交流平台 保留所有权利</span>
+            <span class="fr">copyright 2019 ICP备案证书号：京ICP备xxxxx号-1</span>
+        </div>
+    </div>
+</footer>
     </center>
     </center>
 </body>
