--- a/templates/user_function.html
+++ b/templates/user_function.html
@@ -1,5 +1,5 @@
 {% load static %}
-<!-- 空白背景框dialog作为定位 -->
+<!-- 空白背景框jsdialog作为定位 -->
 <div class="dialog" id="jsDialog">
     <div class="successbox dialogbox" id="jsSuccessTips">
         <h1>成功提交</h1>
