--- a/templates/video/base.html
+++ b/templates/video/base.html
@@ -86,11 +86,9 @@
                                     查看程序<img class="hot" src="{% static 'images/nav_hot.png' %}">
                                 </a>
                             </li>
-                            <li {% if request.path|slice:'6' == '/vedio' %}class="active"{% endif %}>
-                                <a href="{% url 'video:index' %}">观看视频</a>
-                            </li>
                             <li {% if request.path|slice:'9' == '/org/list' %}class="active" {% endif %}><a
                                     href="">论坛</a></li>
+                            {% block list %}  {% endblock list %}
                         </ul>
                     </div>
                 </div>
