--- a/templates/video/index.html
+++ b/templates/video/index.html
@@ -27,7 +27,7 @@
                                     </a>
                                 </h1>
                                 <ul class="cont clearfix"> 
-                                    <p>视频简介：<span>{{video.description}}</span></p><br>
+                                    <p>视频简介：<span>{{video.description}}</span></p>
                                     <p>发布时间：<span>{{ video.create_time }}</span></p>  
                                 </ul>
                             </dd>
