--- a/templates/video/detail.html
+++ b/templates/video/detail.html
@@ -8,17 +8,41 @@
 
 {% endblock list %}
 
+{% block custom_css %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/video-js.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/muke/base.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/muke/common-less.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/muke/course/learn-less.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/mooc.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/muke/course/common-less.css' %}">
+    <style>
+        .video-js .vjs-big-play-button {
+            top: 50%;
+            left: 50%;
+        }
+    </style>
+{% endblock %}
+
+{% block custom_js %}
+    <script src="{% static 'js/video.min.js' %}" type="text/javascript"></script>
+{% endblock %}
+
+
 {% block content %}
-    <div>
-    
-        <video class="video" autoplay="autoplay" controls="controls" controlslist="nodownload">
-            <source src="{{MEDIA_URL}}{{video.file}}" type="video/mp4">
-        </video>
-        <p>{{ video.title }}</p>
-        <hr>
-        <p>{{video.description}}</p> 
-
+    <div id="main">
+        <div class="course-info-main clearfix w has-progress">
+            <div style="width:800px;height: 370px; margin-left:60px">
+                <video id="example_video_1" class="video-js vjs-default-skin" controls preload="none" width="640"
+                       data-setup="" type="video/mp4">
+                    <source src="{{MEDIA_URL}}{{video.file}}" type="video/mp4">
+                </video>
+            </div>
+        </div>
+        <div style="width:1200px;height: 380px; margin-left:80px">
+            <h2> {{ video.title }} </h2>
+            <ul class="cont clearfix"> 
+                <p>视频简介：<span>{{video.description}}</span></p><br> 
+            </ul>
+        </div>
     </div>
-
-{% endblock content %} 
-
+{% endblock content%}
