--- a/templates/user_function.html
+++ b/templates/user_function.html
@@ -66,19 +66,19 @@
             {% csrf_token %}
         </form>
     </div>
-    <div class="dialogbox changeemai1 changephone" id="jsChangeMobileDialog"></div>
-        <h1>修改手机</h1>
+    <div class="dialogbox changeemai1 changephone" id="jsChangeMobileDialog">
+        <h1>修改绑定手机</h1>
         <div class="close jsCloseDialog"><img src="{% static 'images/dig_close.png' %}"/></div>
         <p>请输入新的手机号码</p>
         <form id="jsChangeEmailForm" autocomplete="off">
             <div class="box">
-                <input class="fl change_email" name="email" id="jsChangeEmail" type="text" placeholder="输入重新绑定的手机号码">
+                <input class="fl change_email" name="mobile" id="jsChangeMobile" type="text" placeholder="输入重新绑定的手机号码">
             </div>
             <div class="box">
-                <input class="fl email_code" type="text" id="jsChangeEmailCode" name="code" placeholder="输入手机验证码">
-                <input class="getcode getting" type="button" id="jsChangeEmailCodeBtn" value="获取验证码">
+                <input class="fl email_code" type="text" id="jsChangeMobileCode" name="code" placeholder="输入手机验证码">
+                <input class="getcode getting" type="button" id="jsChangeMobileCodeBtn" value="获取验证码">
             </div>
-            <div class="error btns change_email_tips" id="jsChangeEmailTips">请输入...</div>
+            <div class="error btns change_email_tips" id="jsChangeMobileTips">请输入...</div>
             <div class="button">
                 <input class="changeemai_btn" id="jsChangeEmailBtn" type="button" value="完成"/>
             </div>
