--- a/templates/usercenter_base.html
+++ b/templates/usercenter_base.html
@@ -39,9 +39,9 @@
 
 {% block custom_js %}
 <script src="{% static 'js/plugins/jquery.upload.js' %}" type='text/javascript'></script>
+<script src="{% static 'js/validateDialog.js' %}" type="text/javascript"></script>
 <script src="{% static 'js/validate.js' %}" type="text/javascript"></script>
 <script src="{% static 'js/deco-user.js' %}"></script>
-
 {% block user_js %}
 {% endblock %}
 
