--- a/templates/usercenter_info.html
+++ b/templates/usercenter_info.html
@@ -79,6 +79,6 @@
 
 {% block custom_js %}
 <script src="{% static 'js/plugins/jquery.upload.js' %}" type='text/javascript'></script>
-<script src="{% static 'js/validate.js' %}" type="text/javascript"></script>
+<script src="{% static 'js/validateDialog.js' %}" type="text/javascript"></script>
 <script src="{% static 'js/deco-user.js' %}"></script>
 {% endblock %}
