changed some descriptions

--- a/templates/files/detail.html
+++ b/templates/files/detail.html
@@ -1,7 +1,7 @@
 {% extends "video/base.html" %}
 {% load static %}
 
-{% block title %}视频详情{% endblock title %}
+{% block title %}代码详情{% endblock title %}
 
 {% block content %}
     <div>
@@ -14,7 +14,7 @@
         <p>{{video.description}}</p> 
 
     </div>
-    <a href="/video">返回视频列表</a>
+    <a href="/video">返回代码列表</a>
 
 {% endblock content %} 
 
