added buttons and hrefs

--- a/templates/files/detail.html
+++ b/templates/files/detail.html
@@ -1,6 +1,6 @@
 {% extends "files/base.html" %}
 {% load static %}
-
+<a style="color:white" class="fr loginbtn" href="{% url 'users:login' %}">上传代码</a>
 {% block title %}代码详情{% endblock title %}
 
 {% block content %}
