--- a/templates/files/index.html
+++ b/templates/files/index.html
@@ -4,13 +4,14 @@
 {% block title %}我的代码{% endblock title %}
 
 {% block content %}
+ <div><a style="color:white" class="fr loginbtn" href="{% url 'users:login' %}">上传代码</a></div>
     <div>代码列表</div>
     <br>
     <div>
         {% if file_list %}
             <ul>
             {% for file in file_list %}
-                <a href="{{ file.id }}">{{ file.filename }}</a>
+                <a href="file_show/{{ file.id }}">{{ file.filename }}</a>
                 <div>代码描述：{{file.description}}</div>
                 <div>
                     <span>上传时间：{{ file.upload_time }}</span>
